Fix teams/campuses (#343)
* fix(campuses): handle resize and refactor

* fix(campuses): cover image was not showing

* fix(campuses): image was not overlaping prev section on MD

* fix(teams): fix avatar image sizes

* rename constants

--- a/src/components/structural/home-teams/bio/bio.module.css
+++ b/src/components/structural/home-teams/bio/bio.module.css
@@ -79,15 +79,26 @@
   }
 }
 
-.image {
-  box-sizing: content-box;
+.imageWrapper {
   padding-bottom: 8px;
-  width: 100%;
+  width: 60px;
 
   @media (--bp-sm-only) {
     padding-bottom: 13px;
-    width: 60px;
   }
+
+  @media (--bp-md) {
+    width: 80px;
+  }
+
+  @media (--bp-lg) {
+    width: 100px;
+  }
+}
+
+.image {
+  box-sizing: content-box;
+  width: 100%;
 
   img {
     border-radius: 50%;
